# fontograph

./: CMakeLists.txt  LICENSE
cmake/modules/: findglfw3.cmake
lib/: drawer.cpp  drawer.h  font_manager.h  font_storage.cpp  font_storage.h  shaper.cpp  shaper.h  utils.cpp  utils.h
lib/galogen/: gl.cpp  gl.h
lib/recycle/: blob.cpp  blob.h  buffer.cpp  buffer.h  face.cpp  face.h  font.cpp  font.h  shape.cpp  shape.h
lib/shaders/: debug_frag.inl  debug_individual_geom.inl  debug_lines_geom.inl  label_frag.inl  label_geom.inl  label_vert.inl  simple_vert.inl
